--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
 < body style="background-color: #55D52B">< p>
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>CSGO гей симулятор</title>
+  <link rel="stylesheet" href="./style.css">
+</head>
+<body>
+<!-- partial:index.partial.html -->
+<div class="cases">
+  <h1>Open cases simulator</h1>
+  <div class="background"></div>
+  <div class="caixa"></div>
+  <div class="scrolled">
+    <div class="scrollar">
+    <div class="item">
+    <div class="before"></div>
+    </div>
+    </div>
+  </div>
+  <div class="center"></div>
+</div>
+
+<style id="styles_custom">
+  <before></before>
+</style>
+<!-- partial -->
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
+<script  src="./script.js"></script>
+
+</body>
+</html>
