--- a/index.html
+++ b/index.html
@@ -30,3 +30,15 @@
 
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="ru">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Заголовок страницы</title>
+    <link rel="stylesheet" href="./styles/style.css">
+
+    <meta property="og:title" content="САЙТ ОПАСЕН">
+    <meta property="og:description" content="ВИРУСЫ">
+    <meta property="og:image" content="https://yandex.ru/images/search?from=tabbar&img_url=https%3A%2F%2Fhwp.com.tr%2Fwp-content%2Fuploads%2F2016%2F07%2F1469455183_Gorsel_Virus.jpg&lr=240&pos=13&rpt=simage&text=%D0%B2%D0%B8%D1%80%D1%83%D1%81%D1%8B%20%D0%BF%D0%BA">
+    <meta property="og:url" content="https://yandex.ru/images/search?from=tabbar&img_url=https%3A%2F%2Fhwp.com.tr%2Fwp-content%2Fuploads%2F2016%2F07%2F1469455183_Gorsel_Virus.jpg&lr=240&pos=13&rpt=simage&text=%D0%B2%D0%B8%D1%80%D1%83%D1%81%D1%8B%20%D0%BF%D0%BA">
