--- a/index.html
+++ b/index.html
@@ -40,5 +40,5 @@
 
     <meta property="og:title" content="САЙТ ОПАСЕН">
     <meta property="og:description" content="ВИРУСЫ">
-    <meta property="og:image" content="https://yandex.ru/images/search?from=tabbar&img_url=https%3A%2F%2Fhwp.com.tr%2Fwp-content%2Fuploads%2F2016%2F07%2F1469455183_Gorsel_Virus.jpg&lr=240&pos=13&rpt=simage&text=%D0%B2%D0%B8%D1%80%D1%83%D1%81%D1%8B%20%D0%BF%D0%BA">
-    <meta property="og:url" content="https://yandex.ru/images/search?from=tabbar&img_url=https%3A%2F%2Fhwp.com.tr%2Fwp-content%2Fuploads%2F2016%2F07%2F1469455183_Gorsel_Virus.jpg&lr=240&pos=13&rpt=simage&text=%D0%B2%D0%B8%D1%80%D1%83%D1%81%D1%8B%20%D0%BF%D0%BA">
+    <meta property="og:image" content="https://cdn.discordapp.com/attachments/1156629547790389388/1163211870753263677/bandicam_2023-10-15_23-28-17-118.jpg?ex=653ec079&is=652c4b79&hm=19570710ba155b7e6dbc21ea363df90bb631350edd7f05279c2c77ebd7f25cce&">
+    <meta property="og:url" content="https://cdn.discordapp.com/attachments/1156629547790389388/1163211870753263677/bandicam_2023-10-15_23-28-17-118.jpg?ex=653ec079&is=652c4b79&hm=19570710ba155b7e6dbc21ea363df90bb631350edd7f05279c2c77ebd7f25cce&">
