--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CSGO гей симулятор</title>
+  <title>CSGO гей симулятор </title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 <!-- partial:index.partial.html -->
 <div class="cases">
-  <h1>Open cases simulator</h1>
+  <h1>Open гей симулятор </h1>
   <div class="background"></div>
   <div class="caixa"></div>
   <div class="scrolled">
