--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> я тут гей /title>
+    <title> я тут гей </title>
     <link rel="stylesheet" href="./styles/style.css">
     <meta property="og:title" content="САЙТ ОПАСЕН">
     <meta property="og:description" content="ВИРУСЫ">
